--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" href="homepagemaintenance.css">
         <title>月刊ハヤシライス｜お知らせ｜ホームページメンテナンスのお知らせ</title>
   </head>
 
@@ -11,10 +11,11 @@
       <h1>月刊ハヤシライス</h1>
     </header>
   
-
     <div class="photo">
     <img src="hashedbeef.jpg" width="100%">
     </div>
+
+    <p id="page-top"><a href="#">Page Top</a></p>
 
     <div class="main">
       <h1>ホームページメンテナンスのお知らせ</h1>
@@ -28,8 +29,12 @@
     </div>
 
     <footer>
-     <p>月刊ハヤシライス　公式ホームページ</p>
+      <p>月刊ハヤシライス　公式ホームページ</p>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <!--自作のJS-->
+    <script src="script.js"></script>
   </body>
     
 </html>
