--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="homepagemaintenance.css">
+        <link rel="stylesheet" href="stylesheet.css">
         <title>月刊ハヤシライス｜お知らせ｜ホームページメンテナンスのお知らせ</title>
   </head>
 
